--- a/prueba.ipynb
+++ b/prueba.ipynb
@@ -827,10 +827,10 @@
    "source": [
     "m = np.array(\n",
     "    [\n",
-    "        [1,2,3,4,5],\n",
-    "        [1,2,3,4,5],\n",
-    "        [1,2,3,4,5],\n",
-    "        [1,2,3,4,5],\n",
+    "        [1, 2, 3, 4, 5],\n",
+    "        [1, 2, 3, 4, 5],\n",
+    "        [1, 2, 3, 4, 5],\n",
+    "        [1, 2, 3, 4, 5],\n",
     "    ]\n",
     ")\n",
     "\n",
@@ -860,28 +860,39 @@
     "d = rd.Substance.from_thermo_database(\"CO\", \"carbon monoxide\")\n",
     "e = rd.Substance.from_thermo_database(\"H_{2}O\", \"water\")\n",
     "\n",
-    "mix = rd.mix.IdealGas([a,b,c,d,e])\n",
+    "mix = rd.mix.IdealGas([a, b, c, d, e])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def rate_r1(c, t, **constants):\n",
-    "    a, b = constants.get(\"a\"), constants.get(\"b\")\n",
-    "    ...\n",
-    "    \n",
+    "    a, e = constants[\"A\"], constants[\"E\"]\n",
+    "    return a * np.exp(-e / (8.314 * t)) * c[\"ch4\"] * c[\"h2o\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "def rate_r2():\n",
     "    ...\n",
+    "\n",
     "\n",
     "kinetic = rd.kinetic.Kinetic(\n",
     "    mix,\n",
     "    {\n",
-    "        \"r1\": {\n",
-    "            \"eq\": a + 2 * b > c + 2 * e,\n",
-    "            \"rate\": rate_r1\n",
-    "        },\n",
-    "        \"r2\": {\n",
-    "            \"eq\": a + 3 / 2 * b > d + 2 * e,\n",
-    "            \"rate\": rate_r2\n",
-    "        }\n",
+    "        \"r1\": {\"eq\": a + 2 * b > c + 2 * e, \"rate\": rate_r1},\n",
+    "        \"r2\": {\"eq\": a + 3 / 2 * b > d + 2 * e, \"rate\": rate_r2},\n",
     "    },\n",
-    "    kinetic_constants = {}\n",
+    "    kinetic_constants={},\n",
     ")"
    ]
   },
