refactor(useofpfr.py): nada

--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SO2\n",
+      "oxygen\n"
+     ]
+    }
+   ],
    "source": [
-    "so2 = rd.Substance.from_thermo_database(\"SO2\")\n",
-    "o2 = rd.Substance.from_thermo_database(\"O2\")\n",
-    "so3 = rd.Substance.from_thermo_database(\"SO3\")\n",
-    "co2 = rd.Substance.from_thermo_database(\"CO2\")"
+    "so2 = rd.Substance.from_thermo_database(\"SO2\",\"SO2\")\n",
+    "o2 = rd.Substance.from_thermo_database(\"oxygen\", \"O2\")\n",
+    "so3 = rd.Substance.from_thermo_database(\"SO3\", \"SO3\")\n",
+    "co2 = rd.Substance.from_thermo_database(\"CO2\", \"CO2\")\n",
+    "\n",
+    "print(so2.name)\n",
+    "print(o2.name)\n"
    ]
   },
   {
@@ -38,26 +50,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we create a mixture, introducing the objects as a dictionary. In this case, an instance of the IdealGas class is created:"
+    "Now we create a mixture, introducing the objects as a list. In this case, an instance of the IdealGas class is created:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "263.1\n",
-      "oxygen\n",
-      "8207325.0\n"
+     "ename": "NameError",
+     "evalue": "name 'so2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m gas_mixture \u001b[39m=\u001b[39m rd\u001b[39m.\u001b[39mmix\u001b[39m.\u001b[39mIdealGas(A\u001b[39m=\u001b[39mso2, B\u001b[39m=\u001b[39mo2, C\u001b[39m=\u001b[39mso3, Inert\u001b[39m=\u001b[39mco2)\n\u001b[1;32m      3\u001b[0m \u001b[39m# The mixture is a list of substances to which we can access:\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(gas_mixture\u001b[39m.\u001b[39msubstances[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mnormal_boiling_point)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'so2' is not defined"
      ]
     }
    ],
    "source": [
-    "gas_mixture = rd.mix.IdealGas(A=so2, B=o2, C=so3, Inert=co2)\n",
+    "gas_mixture = rd.mix.IdealGas([so2, o2, so3, co2])\n",
     "\n",
     "# The mixture is a list of substances to which we can access:\n",
     "print(gas_mixture.substances[0].normal_boiling_point)\n",
@@ -75,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -206,12 +220,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov  2 2022, 18:53:38) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "32c67f4c963949a7fe70ff718e2227e313500f4b2abdd00c87839288217969e2"
+    "hash": "0da960acde017608603fcb155815528bc626e42a5841520214e4e02be5770591"
    }
   }
  },
