docs(ideal_gas-tutorial): ahora funciona el tutorial para ideal_gas

--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -50,23 +50,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we create a mixture, introducing the objects as a list. In this case, an instance of the IdealGas class is created:"
+    "A mixture is formed by introducing the objects as a list. In this case, an instance of the IdealGas class is created:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'so2' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m gas_mixture \u001b[39m=\u001b[39m rd\u001b[39m.\u001b[39mmix\u001b[39m.\u001b[39mIdealGas(A\u001b[39m=\u001b[39mso2, B\u001b[39m=\u001b[39mo2, C\u001b[39m=\u001b[39mso3, Inert\u001b[39m=\u001b[39mco2)\n\u001b[1;32m      3\u001b[0m \u001b[39m# The mixture is a list of substances to which we can access:\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mprint\u001b[39m(gas_mixture\u001b[39m.\u001b[39msubstances[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mnormal_boiling_point)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'so2' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "263.1\n",
+      "oxygen\n",
+      "8207325.0\n"
      ]
     }
    ],
@@ -84,12 +82,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given the number of moles of each substance in the mixture, molar fractions can be calculated. Additionally, to calculate concentrations (**mol/m³**), temperature (**K**) and pressure (**Pa**) are required:"
+    "Based on the number of moles of each substance in the mixture, molar fractions can be calculated. Furthermore, in order to determine the concentrations (**mol/m³**), temperature (**K**) and pressure (**Pa**) are necessary:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -97,14 +95,14 @@
      "output_type": "stream",
      "text": [
       "molar fractions:  [0.2143 0.2857 0.0714 0.4286] True\n",
-      "Concentrations (mol/m³):  [ 8.76 11.68  2.92 17.52]\n"
+      "Concentrations (mol/m³):  [ 61.31  81.75  20.44 122.62]\n"
      ]
     }
    ],
    "source": [
     "moles = [1.5, 2, 0.5, 3]\n",
     "\n",
-    "molar_fractions = np.round(gas_mixture.mol_fractions(moles), 4)\n",
+    "molar_fractions = np.round(gas_mixture.mole_fractions(moles), 4)\n",
     "print(\"molar fractions: \", molar_fractions, sum(molar_fractions) == 1)\n",
     "\n",
     "temperature = 298.15  # K\n",
@@ -120,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The IdealGas class also has methods to:\n",
+    "The IdealGas class also includes methods to:\n",
     "\n",
     "-  Calculate the molar volume (mol/m³)\n",
     "-  Calculate the heat capacity (J/K)\n",
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -157,14 +155,14 @@
     ")\n",
     "print(\n",
     "    \"Heat capacity: \",\n",
-    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature), 1),\n",
+    "    np.round(gas_mixture.mix_heat_capacity(moles, temperature, pressure), 1),\n",
     "    \" J/K\",\n",
     ")\n",
     "\n",
-    "standard_enthalpies = gas_mixture._formation_enthalpies_set()\n",
+    "standard_enthalpies = gas_mixture.get_formation_enthalpies()\n",
     "print(\"Formation enthalpies: \", standard_enthalpies, \" J/(mol.K)\")\n",
     "\n",
-    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400)\n",
+    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400, pressure)\n",
     "print(\"Enthalpy correction: \", np.round(enthalpy_correction, 1), \" J/(mol.K)\")\n",
     "print(\n",
     "    \"Corrected enthalpies: \",\n",
@@ -178,29 +176,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A method to calculate the partial pressures is defined at the level of the abstract class AbstractMix"
+    "A method for calculating the partial pressures is defined within the abstract class AbstractMix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 72727. 181818. 136364. 109091.] Pa\n"
+      "[ 72727. 181818. 136364. 109091.] Pa\n",
+      "500000.0 True\n"
      ]
     }
    ],
    "source": [
     "moles = [8, 20, 15, 12]\n",
+    "mole_fractions = gas_mixture.mole_fractions(moles)\n",
     "temperature = 700  # K\n",
     "pressure = 500000  # Pa\n",
     "\n",
-    "partial_pressures = gas_mixture.partial_pressures(moles, temperature, pressure)\n",
-    "print(np.round(partial_pressures, 0), \"Pa\")"
+    "partial_pressures = gas_mixture.partial_pressures(mole_fractions, temperature, pressure)\n",
+    "print(np.round(partial_pressures, 0), \"Pa\")\n",
+    "\n",
+    "# The sum of all the partial pressures gives the total pressure:\n",
+    "print(np.sum(partial_pressures), pressure == np.sum(partial_pressures) )"
    ]
   }
  ],
