--- a/docs/source/tutorial/substance.ipynb
+++ b/docs/source/tutorial/substance.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2f71428b",
    "metadata": {},
@@ -36,9 +37,14 @@
    "source": [
     "### Substance objects instantiation\n",
     "\n",
-    "A fully defined Substance contains a lot of information that may not be \n",
-    "available or may not be necessary for the reactive system that will be \n",
-    "simulated. The minimum necessary information for each substance will be \n",
+    "A fully defined Substance contains a lot of information. Specific attributes definition will be\n",
+    "required for the reactors, described in each reactor documentation. For example, an adiabatic \n",
+    "reactor will require that substances define a heat capacity function, on the other hand, when using isothermic reactors this won't be necessary. \n",
+    "Substance has the from_thermo_data_base alternative construction method. \n",
+    "Substances objects can be saved as pickle files with the method ```to_pickle ```. substances can be loaded from a pickle file with the method ```from_pickle ```\n",
+    "\n",
+    "\n",
+    "The minimum necessary information for each substance will be \n",
     "specified on each mixture and each reactor. The complete signature for the \n",
     "Substance objects is:\n",
     "\n",
@@ -52,21 +58,22 @@
     "    critical_pressure: float = None,  \n",
     "    acentric_factor: float = None,  \n",
     "    formation_enthalpy: float = None,  \n",
-    "    formation_enthalpy_ig: float = None,  \n",
-    "    formation_gibbs: float = None,  \n",
-    "    formation_gibbs_ig: float = None,  \n",
-    "    vaporization_enthalpy_t: Callable = None,  \n",
-    "    sublimation_enthalpy_t: Callable = None,  \n",
-    "    volume_solid_t: Callable = None,  \n",
-    "    volume_liquid_tp: Callable = None,  \n",
-    "    volume_gas_tp: Callable = None,  \n",
-    "    heat_capacity_solid_t: Callable = None,  \n",
-    "    heat_capacity_liquid_t: Callable = None,  \n",
-    "    heat_capacity_gas_t: Callable = None,  \n",
-    "    thermal_conductivity_liquid_tp: Callable = None,  \n",
-    "    thermal_conductivity_gas_tp: Callable = None,  \n",
-    "    viscosity_liquid_tp: Callable = None,  \n",
-    "    viscosity_gas_tp: Callable = None,  \n",
+    "    formation_enthalpy_ig: float = None,   \n",
+    "    vaporization_enthalpy: Callable = None,  \n",
+    "    sublimation_enthalpy: Callable = None,  \n",
+    "    volume_solid: Callable = None,  \n",
+    "    volume_liquid: Callable = None,   \n",
+    "    heat_capacity_solid: Callable = None,  \n",
+    "    heat_capacity_liquid: Callable = None,  \n",
+    "    heat_capacity_gas: Callable = None,  \n",
+    "    thermal_conductivity_liquid: Callable = None,  \n",
+    "    thermal_conductivity_gas: Callable = None,  \n",
+    "    viscosity_liquid: Callable = None,  \n",
+    "    viscosity_gas: Callable = None,\n",
+    "    heat_capacity_solid_dt_integral: Callable = None,  \n",
+    "    heat_capacity_liquid_dt_integral: Callable = None,  \n",
+    "    heat_capacity_gas_dt_integral: Callable = None,  \n",
+    "    vectorize_functions: bool = False\n",
     ")\n",
     "```\n",
     "The Substance arguments may be classified in two grups:  \n",
@@ -79,22 +86,24 @@
     "    - critical_pressure  \n",
     "    - acentric_factor  \n",
     "    - formation_enthalpy  \n",
-    "    - formation_enthalpy_ig  \n",
-    "    - formation_gibbs  \n",
-    "    - formation_gibbs_ig    \n",
+    "    - formation_enthalpy_ig     \n",
     "* Temperature and pressure dependent properties:  \n",
-    "    - vaporization_enthalpy_t  \n",
-    "    - sublimation_enthalpy_t  \n",
-    "    - volume_solid_t  \n",
-    "    - volume_liquid_tp  \n",
-    "    - volume_gas_tp  \n",
-    "    - heat_capacity_solid_t  \n",
-    "    - heat_capacity_liquid_t  \n",
-    "    - heat_capacity_gas_t  \n",
-    "    - thermal_conductivity_liquid_tp  \n",
-    "    - thermal_conductivity_gas_tp  \n",
-    "    - viscosity_liquid_tp  \n",
-    "    - viscosity_gas_tp  \n",
+    "    - vaporization_enthalpy\n",
+    "    - sublimation_enthalpy\n",
+    "    - volume_solid_\n",
+    "    - volume_liquid\n",
+    "    - volume_gas \n",
+    "    - heat_capacity_solid \n",
+    "    - heat_capacity_liquid \n",
+    "    - heat_capacity_gas  \n",
+    "    - thermal_conductivity_liquid  \n",
+    "    - thermal_conductivity_gas \n",
+    "    - viscosity_liquid\n",
+    "    - viscosity_gas\n",
+    "* Properties calculated by integration\n",
+    "    - heat_capacity_solid_dt_integral\n",
+    "    - heat_capacity_liquid_dt_integral\n",
+    "    - heat_capacity_gas_dt_integral\n",
     "\n",
     "The **Temperature and pressure dependent properties** must be specified as \n",
     "python functions of temperature, or both temperature and pressure, as \n",
@@ -251,6 +260,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fdcd6148",
    "metadata": {},
@@ -440,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
