docs(kinetic.ipynb,-ideal_gas.ipynb,-useOfPfr.py): finalizados los tutoriales

--- a/docs/source/tutorial/ideal_gas.ipynb
+++ b/docs/source/tutorial/ideal_gas.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,13 +36,13 @@
     }
    ],
    "source": [
-    "so2 = rd.Substance.from_thermo_database(\"SO2\",\"SO2\")\n",
+    "so2 = rd.Substance.from_thermo_database(\"SO2\", \"SO2\")\n",
     "o2 = rd.Substance.from_thermo_database(\"oxygen\", \"O2\")\n",
     "so3 = rd.Substance.from_thermo_database(\"SO3\", \"SO3\")\n",
     "co2 = rd.Substance.from_thermo_database(\"CO2\", \"CO2\")\n",
     "\n",
     "print(so2.name)\n",
-    "print(o2.name)\n"
+    "print(o2.name)"
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,9 @@
     "standard_enthalpies = gas_mixture.get_formation_enthalpies()\n",
     "print(\"Formation enthalpies: \", standard_enthalpies, \" J/(mol.K)\")\n",
     "\n",
-    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(400, pressure)\n",
+    "enthalpy_correction = gas_mixture.formation_enthalpies_correction(\n",
+    "    400, pressure\n",
+    ")\n",
     "print(\"Enthalpy correction: \", np.round(enthalpy_correction, 1), \" J/(mol.K)\")\n",
     "print(\n",
     "    \"Corrected enthalpies: \",\n",
@@ -181,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,11 +201,13 @@
     "temperature = 700  # K\n",
     "pressure = 500000  # Pa\n",
     "\n",
-    "partial_pressures = gas_mixture.partial_pressures(mole_fractions, temperature, pressure)\n",
+    "partial_pressures = gas_mixture.partial_pressures(\n",
+    "    mole_fractions, temperature, pressure\n",
+    ")\n",
     "print(np.round(partial_pressures, 0), \"Pa\")\n",
     "\n",
     "# The sum of all the partial pressures gives the total pressure:\n",
-    "print(np.sum(partial_pressures), pressure == np.sum(partial_pressures) )"
+    "print(np.sum(partial_pressures), pressure == np.sum(partial_pressures))"
    ]
   }
  ],
