--- a/docs/source/tutorial/kinetic.ipynb
+++ b/docs/source/tutorial/kinetic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Problem data\n",
+    "fa_in = 5 / 3600  # mol/s\n",
+    "f_volumetric = 10 * 0.001 / 60  # m3/s\n",
+    "\n",
+    "k1 = 0.05 / 3600 / 0.001  # mol/s/m3\n",
+    "k2 = 0.15 / 3600 / 0.001  # mol/s/m3\n",
+    "\n",
+    "v_pfr = 99 * 0.001  # m3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,22 +38,6 @@
     "\n",
     "def r_rate2(c, t, cons):\n",
     "    return np.full(np.size(t), cons[\"k2\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "  # Problem data\n",
-    "fa_in = 5 / 3600  # mol/s\n",
-    "f_volumetric = 10 * 0.001 / 60  # m3/s\n",
-    "\n",
-    "k1 = 0.05 / 3600 / 0.001  # mol/s/m3\n",
-    "k2 = 0.15 / 3600 / 0.001  # mol/s/m3\n",
-    "\n",
-    "v_pfr = 99 * 0.001  # m3"
    ]
   },
   {
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = rd.Substance(name=\"A\")\n",
-    "b = rd.Substance(name=\"B\")\n",
-    "c = rd.Substance(name=\"C\")\n",
-    "d = rd.Substance(name=\"D\")"
+    "a = rd.Substance.from_thermo_database(\"meoh\", \"meoh\")\n",
+    "b = rd.Substance.from_thermo_database(\"h2o2\", \"h2o\")\n",
+    "c = rd.Substance.from_thermo_database(\"formaldehyde\", \"formaldehyde\")\n",
+    "d = rd.Substance.from_thermo_database(\"h2o\", \"h2o\")"
    ]
   },
   {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,11 @@
     "reactions={\"reaction_1\": {**\"eq\"**: a > b, **\"rate\"**: r_rate1}, \n",
     "           \"reaction_2\":{**\"eq\"**: x > y, **\"rate\"**: r_rate2}...}\n",
     "\n",
-    "The keywords **\"eq\"** (for equation) and **\"rate\"** (for reaction rate) are mandatory\n",
+    "The keywords **\"eq\"** (for equation) and **\"rate\"** (for reaction rate) are required.\n",
+    "The keyword **\"DH\"** is used for the enthalpy of reaction and is optional. However,\n",
+    "if the enthalpy is set for one reaction, it must be specified for all reactions,\n",
+    "otherwise an error will occur.\n",
+    "\n",
     "\n",
     "On the other hand, the dictionary kinetic_constants contains the rate constants\n",
     "for the reactions. The keywords for the rate constants can be chosen freely."
@@ -95,15 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
     "kinetic = rd.Kinetic(\n",
     "    mix=mix,\n",
-    "    reactions={\"r1\": {\"eq\": a > b, \"rate\": r_rate1},\n",
-    "               \"r2\": {\"eq\": a + b > (c + 2*d), \"rate\": r_rate2}},\n",
+    "    reactions={\n",
+    "        \"r1\": {\"eq\": b > d, \"rate\": r_rate1, \"DH\": -5000},\n",
+    "        \"r2\": {\"eq\": a + b > (c + 2 * d), \"rate\": r_rate2, \"DH\": 2000},\n",
+    "    },\n",
     "    kinetic_constants={\"k1\": k1, \"k2\": k2},\n",
+    "    rates_argument=\"concentration\",\n",
     ")"
    ]
   },
@@ -112,18 +119,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The format \"xa + yb > wc + zd\" allows us to visually represent the reactions in an aesthetically pleasing Latex format. For that, we invoke the **irepr** property."
+    "The format \"aA + bB > cC + dD\" enables us to visually represent reactions in an aesthetically pleasing LaTeX format. To accomplish this, we utilize the **irepr** property."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r1: A \\rightarrow B$"
+       "$\\displaystyle r1: h2o2 \\rightarrow h2o$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -135,7 +142,7 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle r2: A + B \\rightarrow C + 2 D$"
+       "$\\displaystyle r2: h2o2 + meoh \\rightarrow formaldehyde + 2 h2o$"
       ],
       "text/plain": [
        "<IPython.core.display.Math object>"
@@ -154,17 +161,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dunder method __len__ was overwritten to provide the number of reactions\n",
+    "The dunder method __len__ has been overriden to provide the number of reactions\n",
     "in the class Kinetic.\n",
     "\n",
-    "Additionally, the dunder method __repr__ return the subtances contained in the mixture.\n",
-    "\n",
-    "***PREGUNTAR SI ESTA BIEN, PQ APARECE TAMBIEN UNA REPRESENTACION DEL IREPR AHI***"
+    "Furthermore, the dunder method __repr__ return the subtances contained in the mixture."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -172,14 +177,14 @@
      "output_type": "stream",
      "text": [
       "Mixture's substances: \n",
-      "  * A \n",
-      "  * B \n",
-      "  * C \n",
-      "  * D \n",
+      "  * meoh \n",
+      "  * h2o2 \n",
+      "  * formaldehyde \n",
+      "  * h2o \n",
       "\n",
       "System's reactions: \n",
-      "r1: A \\rightarrow B \n",
-      "r2: A + B \\rightarrow C + 2 D \n",
+      "r1: h2o2 \\rightarrow h2o \n",
+      "r2: h2o2 + meoh \\rightarrow formaldehyde + 2 h2o \n",
       "\n"
      ]
     }
@@ -190,11 +195,142 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Reaction enthalpies are a property of the class kinetics:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-5000,  2000])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kinetic.user_r_dh"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, once the enthalpies are set, they cannot be modified. The following statement will raise a value error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "User reaction enthalpies are not mutable, instantiate a new kinetic object.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[84], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m kinetic\u001b[39m.\u001b[39;49muser_r_dh \u001b[39m=\u001b[39m [\u001b[39m1000\u001b[39m, \u001b[39m-\u001b[39m\u001b[39m500\u001b[39m]\n",
+      "File \u001b[0;32m~/Escritorio/SoftwareDevelopment/ReactorD/reactord/kinetic/kinetic.py:64\u001b[0m, in \u001b[0;36mKinetic.user_r_dh\u001b[0;34m(self, new_dhs)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39m@user_r_dh\u001b[39m\u001b[39m.\u001b[39msetter\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39muser_r_dh\u001b[39m(\u001b[39mself\u001b[39m, new_dhs: NDArray):\n\u001b[0;32m---> 64\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m     65\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUser reaction enthalpies are not mutable, instantiate a new \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     66\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mkinetic object.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     67\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: User reaction enthalpies are not mutable, instantiate a new kinetic object."
+     ]
+    }
+   ],
+   "source": [
+    "kinetic.user_r_dh = [1000, -500]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'evaluate' method is utilized by the reactors to calculate reaction rates by utilizing the rate laws and kinetic constants provided as parameters during the creation of the 'Kinetic' object. This method requires molar fractions, temperature, and pressure as additional parameters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The individual reaction rates are: \n",
+      "[[0.01388889]\n",
+      " [0.04166667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "moles = [8, 20, 15, 12]\n",
+    "mole_fractions = mix.mole_fractions(moles)\n",
+    "temperature = 300  # K\n",
+    "pressure = 500_000  # Pa\n",
+    "\n",
+    "print(f\" The individual reaction rates are: \\n\\\n",
+    "{kinetic.evaluate(mole_fractions, temperature, pressure)}\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, the method 'dhs_evalute' calculate the enthalpies of each reaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function dh_specified at 0x7f6d35323d00>\n"
+     ]
+    }
+   ],
+   "source": [
+    "kinetic.set_dh_function()\n",
+    "print(kinetic._enthalpy_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-5000],\n",
+       "       [ 2000]])"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kinetic.dhs_evaluate(temperature, pressure)"
+   ]
   }
  ],
  "metadata": {
